# ASOkai-fork

./: .gitignore  .gitmodules  PLUGINS.md  README.md  __init__.py  config.ini  config.yaml  environment.yaml  main.py  pedersen_params.json  pyproject.toml  requirements.txt  setup.py  submit_job.sh.example  test_asokai.ipynb  vienna_dna_rna_params.par
.github/workflows/: main.yaml
docs/: coding-guidelines.md  kmc.md  requirements.txt
docs/source/: conf.py  contributors.rst  getting-started.rst  index.rst  license.rst
src/: __init__.py  candidate_manager.py  data_manager.py  file_operations.py  genome_data_manager.py  kmer_counter.py  oligo_extractor.py  results_generator.py  sequence_analysis.py
src/ASOKai/: Analysis.py  Antisense.py  Biochemistry.py  Sites.py  Targets.py  Utils.py  __init__.py
src/ASOkai/: Utils.py  __init__.py  plugin_api.py
src/antisense/: __init__.py  antisense_construct.py
src/biochemistry/: __init__.py  chemistry.py  mechanism_of_action.py
src/sites/: __init__.py
src/utils/: file_operations.py  genome.py  kmer_searcher.py  sequence_analysis.py
tests/: README.md  __init__.py
tests/integration/: __init__.py  test_serialization_integration.py
tests/unit/: __init__.py  test_analysis_base.py  test_analysis_step_base.py  test_aso.py  test_base_site_functionality.py  test_cli_main.py  test_create_target_gene_step.py  test_cwl_generation.py  test_download_genome_step.py  test_executors.py  test_genomic_site.py  test_input_resolution.py  (+17 more)
utils/: bowtie2_operations.py  file_operations.py  kmer_searcher.py  sequence_analysis.py
(+137 files in other folders)
