[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "ASOkai"
version = "0.1.0"
authors = [
    {name="Seyedarash Ayatollahi", email="seyedarash.ayatollahi@b-tu.de"},
]
maintainers = [
    {name="Nathalie Gocht", email="nathalie.gocht@b-tu.de"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent"
]
license = "LGPL-3.0-or-later"

dependencies = [
    "PyYAML>=6.0",
    "click>=8.0",
    "gffutils>=0.13,<0.14",
    "requests>=2.32,<3",
    "biopython>=1.83,<2",
    "tqdm>=4.67,<5",
    "GenomeUtils>=0.1.1,<2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"cwl.steps"     = ["*.cwl"]
"cwl.tasks"     = ["*.cwl"]
"cwl.workflows" = ["*.cwl"]

[project.scripts]
ASOkai              = "ASOkai.cli.main:main"
download-genome     = "pipeline.steps.download_genome:main"
create-target-gene  = "pipeline.steps.create_target_gene:main"
intrinsic-features  = "pipeline.steps.intrinsic_features:main"


